--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <nav>
     <app-navbar></app-navbar>
   </nav>
-  <main class="background">
+  <main class="content">
+    <div class="main-background"></div>
     <router-outlet></router-outlet>
   </main>
 </div>
