--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,12 +1,9 @@
-<ul class="list">
-  <li><a routerLink="/" class="link">
-          Home</a></li>
-  <li><a href="#" class="link">
-          Blogs</a></li>
-  <li><a href="#" class="link">
-          Services</a></li>
-  <li><a href="#" class="link">
-          Contact</a></li>
-  <li><a href="/aboutMe" class="link">
-          About Me</a></li>
-</ul>
+<nav>
+  <ul class="list">
+    <li><a routerLink="/" class="link"> Home</a></li>
+    <!-- <li><a href="#" class="link"> Blogs</a></li> -->
+    <li><a href="#" class="link"> Services</a></li>
+    <li><a href="#" class="link"> Contact</a></li>
+    <li><a href="/aboutMe" class="link"> About Me</a></li>
+  </ul>
+</nav>
