--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -1,7 +1,10 @@
 .blogger-image {
   width: 150px; /* Imposta la larghezza dell'immagine */
   height: 150px; /* Imposta l'altezza dell'immagine */
+  border-radius: 50%; /* Make the image circular */
+  animation: rotateIn 1s ease-out; /* Apply the animation */
 }
+
 
 /* Stili aggiuntivi per il contenitore o altri elementi */
 .container {
@@ -11,8 +14,50 @@
 
 .text-title{
   color:#9bb7d5;
+  animation: bounceInLeft 2s;
+
 }
 
 .text-description{
   color: whitesmoke;
+  animation: bounceInLeft 2s;
+  font-size: 26px;
 }
+
+
+@keyframes rotateIn {
+  0% {
+    transform: rotateX(0deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(360deg);
+    opacity: 1;
+  }
+}
+
+
+/* Animation for bouncing text */
+@keyframes bounceInLeft {
+  0%, 20%, 40%, 60%, 80%, 100% {
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  0% {
+    transform: translateX(-3000px);
+    opacity: 0;
+  }
+  60% {
+    transform: translateX(25px);
+    opacity: 1;
+  }
+  80% {
+    transform: translateX(-10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+
+
+
