--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <div class="text-center">
-    <img src="../../../assets/image/simone-bagordo.jpeg" alt="Simone Bagordo" class="rounded-circle blogger-image">
+    <img src="../../../assets/image/simone-bagordo.jpeg" alt="Simone Bagordo" class="rounded-circle blogger-image" @rotateIn>
   </div>
   <div class="text-center mt-3">
     <h2 class="text-title">Web Developer</h2>
