--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -6,8 +6,9 @@
 
 .intro {
   text-align: center;
-  white-space: nowrap; /* Assicura che il testo non venga spezzato */
+  white-space: wrap; /* Assicura che il testo non venga spezzato */
   overflow: hidden; /* Nasconde l'overflow del testo animato */
+  animation: bounceInLeft 2s;
 }
 
 .intro span {
@@ -28,5 +29,26 @@
   }
   100% {
     color: white; /* Testo bianco per il restante 50% del tempo */
+  }
+}
+
+/* Animation for bouncing text */
+@keyframes bounceInLeft {
+  0%, 20%, 40%, 60%, 80%, 100% {
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  0% {
+    transform: translateY(-3000px);
+    opacity: 0;
+  }
+  60% {
+    transform: translateY(25px);
+    opacity: 1;
+  }
+  80% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
