add technologies page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,6 +33,7 @@ main.content {
   justify-content: center;
   align-items: center;
   overflow: hidden; /* Nasconde il contenuto oltre i limiti del main */
+  padding-bottom: 5rem;
 }
 
 .main-background {
