--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -2,8 +2,8 @@
   <ul class="list">
     <li><a routerLink="/" class="link"> Home</a></li>
     <!-- <li><a href="#" class="link"> Blogs</a></li> -->
-    <li><a href="#" class="link"> Services</a></li>
-    <li><a href="#" class="link"> Contact</a></li>
     <li><a href="/aboutMe" class="link"> About Me</a></li>
+    <li><a href="/technologies" class="link"> Technologies</a></li>
+    <li><a href="#" class="link"> Contact</a></li>
   </ul>
 </nav>
