--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,45 +1,52 @@
-<form class="my-form" [formGroup]="myForm" (ngSubmit)="submitForm()">
-  <h2 class="text-center">Contact Me</h2>
-  <mat-form-field class="example-full-width">
-    <mat-label>Name</mat-label>
-    <input matInput formControlName="name" />
-    <mat-error
-      *ngIf="
-        myForm.get('name')?.invalid &&
-        (myForm.get('name')?.dirty || myForm.get('name')?.touched)
-      "
-    >
-      The name is required
-    </mat-error>
-  </mat-form-field>
+<div class="container">
+  <form class="my-form" [formGroup]="myForm" (ngSubmit)="submitForm()">
+    <h2 class="text-center">Contact Me</h2>
+    <mat-form-field class="example-full-width">
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name" />
+      <mat-error
+        *ngIf="
+          (myForm.get('name')?.invalid &&
+          (myForm.get('name')?.dirty) || myForm.get('name')?.invalid &&myForm.get('name')?.touched)
+        "
+      >
+        The name is required
+      </mat-error>
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Your Email</mat-label>
-    <input matInput formControlName="email" matAutocomplete="false" />
-    <mat-error
-      *ngIf="
-        myForm.get('email')?.invalid &&
-        (myForm.get('email')?.dirty || myForm.get('email')?.touched)
-      "
-    >
-      Please enter a valid email
-    </mat-error>
-  </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Your Email</mat-label>
+      <input matInput formControlName="email" matAutocomplete="false" />
+      <mat-error
+        *ngIf="
+          myForm.get('email')?.invalid &&
+          (myForm.get('email')?.dirty || myForm.get('email')?.touched)
+        "
+      >
+        Please enter a valid email
+      </mat-error>
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Message</mat-label>
-    <textarea matInput formControlName="message" rows="5"></textarea>
-    <mat-error
-      *ngIf="
-        myForm.get('message')?.invalid &&
-        (myForm.get('message')?.dirty || myForm.get('message')?.touched)
-      "
-    >
-      The description is required
-    </mat-error>
-  </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Message</mat-label>
+      <textarea matInput formControlName="message" rows="5"></textarea>
+      <mat-error
+        *ngIf="
+          myForm.get('message')?.invalid &&
+          (myForm.get('message')?.dirty || myForm.get('message')?.touched)
+        "
+      >
+        The description is required
+      </mat-error>
+    </mat-form-field>
 
-  <button mat-raised-button color="primary" type="submit" class="submit-button">
-    Submit
-  </button>
-</form>
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      class="submit-button"
+    >
+      Submit
+    </button>
+  </form>
+</div>
