--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -5,5 +5,6 @@
     <li><a href="/aboutMe" class="link"> About Me</a></li>
     <li><a href="/technologies" class="link"> Technologies</a></li>
     <li><a href="/contacts" class="link"> Contact</a></li>
+    <li><a href="/my-game" class="link"> My Game</a></li>
   </ul>
 </nav>
