--- a/src/app/components/guess-number-game/guess-number-game.component.css
+++ b/src/app/components/guess-number-game/guess-number-game.component.css
@@ -1,10 +1,10 @@
-
-.game{
+.game {
   text-align: center;
-  color:#555454;
+  color: #555454;
 }
 
-input, button {
+input,
+button {
   font-size: 18px;
   margin: 10px;
   padding: 8px;
@@ -15,7 +15,12 @@ input, button {
   height: 250px;
 }
 
-/* canvas {
-  pointer-events: none;
+.fireworks {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   z-index: 1000;
-} */
+  pointer-events: none;
+}
