add My-Game in Pages

--- a/src/app/components/card-game/card-game.component.html
+++ b/src/app/components/card-game/card-game.component.html
@@ -1,5 +1,5 @@
 <div class="game-container">
-  <h1>🃏 Memory Game - Find the Pairs 🃏</h1>
+  <h1>🃏 Find the Pairs 🃏</h1>
   <p *ngIf="gameWon" class="win-message">🎉 You won! Congratulations! 🎉</p>
 
   <div class="grid mt-3">
