--- a/src/app/layout/navbar/navbar.component.css
+++ b/src/app/layout/navbar/navbar.component.css
@@ -67,12 +67,11 @@ body {
   font-weight: 800;
 }
 
-@media only screen and (max-width: 600px) {
- .list{
-  font-size: 10px;
- }
+@media screen and (max-width: 600px) {
+  .list {
+    /* flex-direction: column; */
+    gap: 10px !important;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
 }
-
-
-
-
