--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <nav>
-  <ul class="list">
+  <div class="menu-toggle" (click)="toggleMenu()">☰</div>
+  <ul class="list" [class.active]="isMenuOpen">
     <!-- <li><a routerLink="/" class="link"> Home</a></li> -->
-    <!-- <li><a href="#" class="link"> Blogs</a></li> -->
-    <li><a href="/aboutMe" class="link"> About Me</a></li>
-    <li><a href="/technologies" class="link"> Technologies</a></li>
-    <li><a href="/contacts" class="link"> Contact</a></li>
-    <li><a href="/my-game" class="link"> My Game</a></li>
+    <li><a routerLink="/aboutMe" class="link" routerLinkActive="active"> About Me</a></li>
+    <li><a routerLink="/technologies" class="link" routerLinkActive="active"> Technologies</a></li>
+    <li><a routerLink="/contacts" class="link" routerLinkActive="active"> Contact</a></li>
+    <li><a routerLink="/my-game" class="link"  routerLinkActive="active"> My Game</a></li>
   </ul>
 </nav>
