--- a/src/app/Pages/Game/game.component.css
+++ b/src/app/Pages/Game/game.component.css
@@ -4,7 +4,7 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  /* padding: 20px; */
+  padding: 20px;
   box-sizing: border-box;
 }
 
@@ -68,4 +68,14 @@
     min-height: 150px;
     margin: 10px 0;
   }
+}
+
+.fireworks {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  pointer-events: none;
 }
