--- a/src/app/Pages/Game/game.component.html
+++ b/src/app/Pages/Game/game.component.html
@@ -1,18 +1,20 @@
 <div class="switch-container">
   <!-- Freccia sinistra -->
-  <span class="arrow left" (click)="switchComponent('prev')">&#10094;</span>
+  <!-- <span class="arrow left" (click)="switchComponent('prev')">&#10094;</span> -->
 
   <!-- Area del componente dinamico -->
-  <div class="component-wrapper" >
-    <ng-container *ngIf="currentComponent === 'component-one'">
-      <app-guess-number-game></app-guess-number-game>
-    </ng-container>
-
+  <!-- <div class="component-wrapper" > -->
+  <!-- <ng-container *ngIf="currentComponent === 'component-one'"> -->
+    <app-card-game (fireworks)="onChangeFireworks($event)"></app-card-game>
+  <!-- </ng-container> -->
+  <!--
     <ng-container *ngIf="currentComponent === 'component-two'">
-      <app-card-game></app-card-game>
-    </ng-container>
-  </div>
-
+      <app-guess-number-game></app-guess-number-game>
+    </ng-container> -->
+  <!-- </div> -->
   <!-- Freccia destra -->
-  <span class="arrow right" (click)="switchComponent('next')">&#10095;</span>
+  <!-- <span class="arrow right" (click)="switchComponent('next')">&#10095;</span> -->
+  <canvas #fireworksCanvas class="fireworks"></canvas>
 </div>
+
+<!-- Scommentare commenti per avere i due giochi con la scelta -->
