--- a/src/app/components/card-game/card-game.component.css
+++ b/src/app/components/card-game/card-game.component.css
@@ -13,17 +13,15 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(4, 90px);
-  grid-gap: 8px;
+  grid-template-columns: repeat(4, 100px);
+  grid-gap: 10px;
   justify-content: center;
   margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
 }
 
 .card {
-  width: 90px;
-  height: 90px;
+  width: 100px;
+  height: 100px;
   background: #333;
   color: white;
   font-size: 40px;
@@ -70,5 +68,22 @@ button {
   font-size: 18px;
   margin: 10px;
   padding: 8px;
+}
+
+@media screen and (max-width: 480px) {
+.card{
+  width: 90px;
+  height: 90px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 90px);
+  grid-gap: 8px;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 }
 
