--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="menu-toggle" (click)="toggleMenu()">☰</div>
-  <ul class="list" [class.active]="isMenuOpen">
+  <ul class="list" [class.active]="isMenuOpen" style="font-size: 20px;">
     <!-- <li><a routerLink="/" class="link"> Home</a></li> -->
     <li><a routerLink="/aboutMe" class="link" routerLinkActive="active"> About Me</a></li>
     <li><a routerLink="/technologies" class="link" routerLinkActive="active"> Technologies</a></li>
