--- a/src/app/Pages/AboutMe/AboutMe.component.html
+++ b/src/app/Pages/AboutMe/AboutMe.component.html
@@ -11,6 +11,13 @@
       enhance my skills in the field of computer science and programming.
     </p>
   </div>
+  <div class="text-center text-linkedin mt-5">
+    <span>Contact me on </span>
+    <a href="https://www.linkedin.com/in/simone-bagordo-7050541a5/?originalSubdomain=it" target="_blank">
+      <img src="../../../assets/image/linkedin-icon.png" alt="LinkedIn" width="40" height="40">
+    </a>
+  </div>
+
 </div>
 
 
