--- a/src/app/components/guess-number-game/guess-number-game.component.html
+++ b/src/app/components/guess-number-game/guess-number-game.component.html
@@ -1,5 +1,5 @@
 <div class="game">
-  <img src="../../../assets/image/logo-game.jpg" alt="" class="rounded-circle blogger-image logo-small">
+  <img src="/my-app/assets/image/logo-game.jpg" alt="" class="rounded-circle blogger-image logo-small">
   <h1>Guess the Number!</h1>
   <p>I have chosen a number between 1 and 100. Can you guess it? {{numeroSegreto}}</p>
   <div class="mb-3">
