--- a/src/app/Pages/AboutMe/AboutMe.component.html
+++ b/src/app/Pages/AboutMe/AboutMe.component.html
@@ -3,7 +3,7 @@
     <img src="/my-app/assets/image/simone-bagordo.jpeg" alt="Simone Bagordo" class="rounded-circle blogger-image" @rotateIn>
   </div>
   <div class="text-center mt-3">
-    <h2 class="text-title">Web Developer</h2>
+    <h2 class="text-title">Web Developerrrrr</h2>
     <p class="text-description">
       My name is Simone Bagordo, and I graduated in Computer Science and Digital Communication from the University of Bari.
       I currently work at a consulting company, where I specialize in front-end development using the Angular framework.
