--- a/src/app/Pages/AboutMe/AboutMe.component.html
+++ b/src/app/Pages/AboutMe/AboutMe.component.html
@@ -8,7 +8,7 @@
       My name is Simone Bagordo, and I graduated in Computer Science and Digital Communication from the University of Bari.
       I currently work at a consulting company, where I specialize in front-end development using the Angular framework.
       I am passionate about technology and software development, and I enjoy tackling complex challenges to continually
-      enhance my skills in the field of computer science and programming..
+      enhance my skills in the field of computer science and programming.
     </p>
   </div>
   <div class="text-center text-linkedin mt-5">
