--- a/src/app/Pages/Game/game.component.css
+++ b/src/app/Pages/Game/game.component.css
@@ -38,6 +38,7 @@
   justify-content: center;
   overflow: hidden;
   position: relative;
+  padding-top: 10%;
 }
 
 /* Animazione keyframes per effetto pulse */
