--- a/src/app/components/sette-mezzo/sette-mezzo.component.css
+++ b/src/app/components/sette-mezzo/sette-mezzo.component.css
@@ -1,6 +1,6 @@
 .game-container {
   text-align: center;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   background: #2c3e50;
   color: white;
   padding: 30px;
@@ -9,7 +9,7 @@
   margin: 20px auto;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   margin-bottom: 140px;
-  margin-right:30px;
+  margin-right: 30px;
 }
 
 .game-title {
@@ -60,4 +60,10 @@
 .btn {
   font-size: 18px;
   padding: 10px 20px;
+}
+
+@media screen and (max-width: 480px) {
+  .game-container {
+    margin-left: 30px;
+  }
 }
