--- a/src/app/components/card-game/card-game.component.css
+++ b/src/app/components/card-game/card-game.component.css
@@ -86,5 +86,12 @@ button {
   margin-left: 20px;
   margin-right: 60px;
 }
+
+button {
+  font-size: 18px;
+  margin: 10px;
+  padding: 8px;
+  margin-right: 50px;
+}
 }
 
