--- a/src/app/Pages/Game/game.component.css
+++ b/src/app/Pages/Game/game.component.css
@@ -97,6 +97,7 @@
   .switch-container {
     flex-direction: column;
     padding: 10px;
+    padding-top: 0px;
   }
 
   /* Nascondi le frecce sui dispositivi mobili */
@@ -110,7 +111,8 @@
     height: auto;
     min-height: 150px;
     margin: 10px 0;
-    padding-top: 2%;
+    padding-top: 0px;
+    margin-top: 0px;
   }
 
   /* Mostra l'indicazione swipe */
